# NextClient

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README.ru.md  vcpkg.json
dep/bzip2/: CMakeLists.txt  bzlib_private.h
dep/data_encoding/: CMakeLists.txt  aes.cpp  base64.cpp
dep/data_encoding/include/data_encoding/: base64.h
dep/easyloggingpp/: CMakeLists.txt
dep/easyloggingpp/src/: easylogging++.h
dep/stb/: CMakeLists.txt
nextclient/client_mini/: CMakeLists.txt
nextclient/client_mini/include/next_client_mini/: client_mini.h
nextclient/client_mini/src/: camera.cpp  camera.h  color_chat_in_console.cpp  color_chat_in_console.h  fov.cpp  fov.h  hlsdk.h  inspect.cpp  inspect.h  invert_mouse.cpp  invert_mouse.h  main.cpp  main.h  shared_util.cpp  shared_util.h  studiorenderer.cpp  studiorenderer.h  utils.cpp  utils.h  view.cpp  view.h  viewmodel_overrides.h
nextclient/client_mini/src/hlsdk/: sys_dll.h
nextclient/client_mini/src/hud/: DrawUtils.h  GameHud.cpp  GameHud.h  HudAmmo.cpp  HudAmmo.h  HudBase.h  HudBaseHelper.h  HudCrosshair.cpp  HudCrosshair.h  HudDamageDirection.cpp  HudDamageDirection.h  HudDamageIcons.cpp  HudDamageIcons.h  HudDeathNotice.cpp  HudDeathNotice.h  HudHealth.cpp  HudHealth.h  HudRadar.cpp  HudRadar.h
nextclient/client_mini/src/pm_shared/: pm_shared.cpp
nextclient/engine_mini/: CMakeLists.txt
nextclient/engine_mini/dep/bzip2/: CMakeLists.txt  bzlib.h
nextclient/engine_mini/include/next_engine_mini/: AnalyticsInterface.h  CommandLoggerInterface.h  DownloadFileLoggerInterface.h  HttpDownloadManagerEventsListenerInterface.h  HttpDownloadManagerInterface.h  NclmVerificatorInterface.h  NextClientVersion.h  cl_private_resources.h  engine_mini.h  nclm_proto.h
nextclient/engine_mini/src/: Registry.h  ResourceDescriptor.h  analytics.cpp  analytics.h  cdll_int.cpp  cstrike_hack.cpp  cstrike_hack.h  elpplog.cpp  engine.cpp  engine.h  hlsdk.h  l_studio.h  pr_cmds.cpp  pr_cmds.h  private_key.h  resource_descriptor.cpp  resource_descriptor.h  vgui_int.h  vgui_intwrap2.cpp
nextclient/engine_mini/src/browser_extensions/: ExtensionConnectionApi.cpp  ExtensionConnectionApi.h  ExtensionCvarApi.cpp  ExtensionCvarApi.h  entry.cpp  entry.h
nextclient/engine_mini/src/client/: cl_custom.cpp  cl_cvar_sandbox.cpp  cl_demo.cpp  cl_demo.h  cl_game.cpp  cl_game.h  cl_main.cpp  cl_main.h  cl_parse.cpp  cl_parsefn.cpp  cl_parsefn.h  cl_pmove.cpp  cl_private_resources.cpp  cl_private_resources.h  cl_scrn.cpp  cl_scrn.h  cl_sound.cpp  cl_sound.h  cl_spectator.cpp  cl_spectator.h  cl_string_registry.cpp  cl_string_registry.h  client.h  client_stateex.h  download.cpp  download.h  s_main.cpp  spriteapi.cpp  spriteapi.h  voice.cpp
nextclient/engine_mini/src/common/: cmd.cpp  cmd.h  com_strings.h  common.cpp  common.h  crtlib.cpp  custom.cpp  cvar.cpp  cvar.h  decal.h  filesystem.h  filesystem_internal.cpp  host.cpp  host.h  host_cmd.cpp  hpak.cpp  md5.cpp  model.cpp  model.h  munge.cpp  net_buffer.cpp  net_buffer.h  net_chan.cpp  net_chan.h  net_msg.cpp  net_ws.cpp  net_ws.h  r_studio.cpp  r_studio.h  sizebuf.cpp  sys_dll.cpp  sys_dll.h  verificator.cpp  verificator.h  wad.cpp  wad.h  zone.cpp  zone.h
nextclient/engine_mini/src/console/: CmdChecker.cpp  CmdChecker.h  CmdLoggerAggregator.cpp  CmdLoggerAggregator.h  ConsoleCmdLogger.cpp  ConsoleCmdLogger.h  console.cpp  console.h  protector.cpp  protector.h
nextclient/engine_mini/src/graphics/: ViewmodelFrustumCalculator.cpp  ViewmodelFrustumCalculator.h  color_scheme.cpp  color_scheme.h  detailtexture.cpp  detailtexture.h  font_render.cpp  font_render.h  gl_draw.cpp  gl_draw.h  gl_local.h  gl_rmain.cpp  gl_sprite.cpp  gl_studio.cpp  gl_vidnt.cpp  glw_win.h  qgl.hpp  qgl_win.cpp  texture_loader.cpp  texture_loader.h  texture_processing.cpp  texture_processing.h  vgui2.cpp  vgui2.h  view.cpp  view.h
nextclient/engine_mini/src/resource/: ResourceDescriptor.cpp
nextclient/engine_mini/src/server/: sv_remoteaccess.cpp  sv_remoteaccess.h
nextclient/engine_mini/src/task/: TaskRun.cpp  TaskRun.h  TaskRunImpl.cpp  TaskRunImpl.h
nextclient/engine_mini/src/utils/: TaskRunImpl.h
nextclient/engine_mini/tests/: CMakeLists.txt  CmdCheckerTests.cpp
nextclient/engine_mini/tests/mocks/: CmdCheckerConfigProviderMock.h  LoggerMock.h
nextclient/filesystem_proxy/: CMakeLists.txt
nextclient/filesystem_proxy/src/: FileSystem_Proxy.cpp  FileSystem_Proxy.h  IFileSystemNext.h
nextclient/gameui/: CMakeLists.txt
nextclient/gameui/include/next_gameui/: IGameConsoleNext.h  IGameUiNext.h
nextclient/gameui/src/: IGameList.h  IServerBrowserEx.h
nextclient/gameui/src/Browser/: AcceptedDomains.cpp  AcceptedDomains.h  CompletionObserver.cpp  CompletionObserver.h  ExtensionCommon.cpp  ExtensionCommon.h  ExtensionConsoleApi.cpp  ExtensionConsoleApi.h  ExtensionGameUiApi.cpp  ExtensionGameUiApi.h  ExtensionMatchmaking.cpp  ExtensionMatchmaking.h  ExtensionMatchmakingListings.cpp  ExtensionMatchmakingListings.h  MainMenuBrowser.cpp  MainMenuBrowser.h
nextclient/gameui/src/GameUi/: BackgroundMenuButton.cpp  BackgroundMenuButton.h  BasePanel.cpp  BasePanel.h  CreateMultiplayerGameDialog.cpp  CreateMultiplayerGameDialog.h  DemoEditDialog.cpp  DemoEditDialog.h  DemoEventsDialog.cpp  DemoEventsDialog.h  DemoPlayerDialog.cpp  DemoPlayerDialog.h  DemoPlayerFileDialog.cpp  DemoPlayerFileDialog.h  GameConsole.cpp  GameConsole.h  GameConsoleDialog.cpp  GameConsoleDialog.h  GameConsoleNext.cpp  GameConsoleNext.h  GameUINext.h  GameUi.cpp  GameUi.h  GameUiNext.cpp  LoadingDialog.cpp  LoadingDialog.h  ModInfo.cpp  ModInfo.h  OptionsDialog.cpp  OptionsDialog.h  PanelListPanel.cpp  PanelListPanel.h  PlayerListDialog.cpp  PlayerListDialog.h  ScriptObject.cpp  ScriptObject.h
nextclient/gameui/src/ServerBrowser/: BaseGamesPage.cpp  BaseGamesPage.h  DialogAddServer.cpp  DialogAddServer.h  DialogGameInfo.h  (+30 more)
nextclient/launcher/: CMakeLists.txt
nextclient/launcher/src/: CMakeLists.txt
nextclient/launcher/tests/: CMakeLists.txt
nextclient/steam_api_proxy/: CMakeLists.txt  version.version
(+439 files in other folders)
